--- a/style.css
+++ b/style.css
@@ -5,3 +5,40 @@ body{
     background: linear-gradient(to right, #eb5757, #000000); 
     color: aliceblue;
 }
+h1{
+    background-color:#0e2d5e;
+    width: max-content;
+    margin-left: auto;
+    margin-right: auto;
+}
+#container{
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+#container div{
+    flex: 2;
+    flex-direction: row;
+    align-items: center;
+    margin: 8px;
+    padding: 13px ;
+    border-radius: 5px;
+    text-align: center;
+    background-color: #21187727;
+}
+
+#container div img{
+    box-shadow: 0 10px 6px -6px rgba(6, 4, 12, .801);
+    max-width: 300px;
+    height: 450px;
+    border-radius: 5px;
+    transition: transform .5s ease;
+}
+#container div img:hover{
+    transform: scale(1.3);
+}
+h2{
+    margin-bottom: 15px;
+    margin-top:auto ;
+}
